# tlddr

./: .gitignore  .mcp.json  .workflow.json  LICENSE  README.md  pyproject.toml
.claude/commands/: tlddr.md
.github/workflows/: tests.yml
docs/: HANDOFF.md  chevron-run-status.md  next-steps.md
docs/stories/: README.md
docs/superpowers/: 2026-07-03-answer-loop-smoke-test-findings.md  2026-07-03-review-decisions-log.md  reconnaissance-findings-2026-06-28.md
skills/draft/: SKILL.md
skills/draft-verify/: SKILL.md
skills/generate-sections/: SKILL.md
skills/review/: SKILL.md
skills/understand/: SKILL.md
tests/: conftest.py  test_amend.py  test_answer.py  test_answer_cli.py  test_bench.py  test_cli.py  test_cli_paths.py  test_commit.py  test_confidence.py  test_config.py  test_config_cli.py  test_docx.py  test_draft_assemble.py  test_draft_claims.py  test_draft_cli.py  test_draft_eval.py  test_draft_models.py  test_draft_pages.py  test_draft_read.py  test_draft_verify.py  test_edges.py  test_extract_tables.py  test_html.py  test_ids.py  test_kmz.py  test_models.py  test_node_render.py  test_pdf.py  test_render.py  test_report.py  test_router.py  test_runstate.py  test_sections.py  test_slice.py  test_status.py  test_status_cli.py  test_triage.py  test_understand_cli.py  test_understand_models.py  test_xlsx.py
tlddr/: CLAUDE.md  answer.py  bench.py  cli.py  config.py  ids.py  models.py  runstate.py  status.py
tlddr/draft/: CLAUDE.md  amend.py  assemble.py  claims.py  eval.py  pages.py  read.py  verify.py
tlddr/extract/: CLAUDE.md  base.py  docx.py  kmz.py  (+6 more)
(+28 files in other folders)
