[project]
name = "tlddr"
version = "0.1.0"
description = "TDD + tl;dr: drafts technical due-diligence reports from source documents"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pymupdf>=1.24",
    "mammoth>=1.7",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "python-docx>=1.1",
]

[project.scripts]
tlddr = "tlddr.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tlddr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
