[project]
name = "tlddr"
version = "0.1.0"
description = "tl-ddr: template-driven Due Diligence report generator — grounded, attributed report drafting from a source-document corpus (agentic RAG)"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pymupdf>=1.24",
    "python-docx>=1.1",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
tlddr = "tlddr.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tlddr*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
